First Semester Assignment

--- a/Assignment.html
+++ b/Assignment.html
@@ -45,7 +45,7 @@
         <div class="logo-qSU">
           <img class="vector-Z7a" src="./assets/vector-7yW.png"/>
           <img class="vector-2-5Lp" src="REPLACE_IMAGE:I1:159;74:1269"/>
-          <div class="scissor-EUc">SCISSOR</div>
+          <div class="scissor-EUc">| SCISSOR</div>
         </div>
         <div class="frame-1000001643-ZWt">
           <p class="my-urls-grQ">My URLs</p>
@@ -97,8 +97,7 @@
       <br/>
       Four
       </span>
-      <span class="one-stopfour-possibilities-GYt-sub-1"> Possibilities</span>
-      <span class="one-stopfour-possibilities-GYt-sub-2">.</span>
+      <span class="one-stopfour-possibilities-GYt-sub-1">Possibilities.</span>
     </p>
     <div class="frame-1000001715-tig">
       <div class="frame-1000001668-qP2">
@@ -128,7 +127,7 @@
       <div class="frame-1000001652-weL">
         <img class="line-70-Ff2" src="./assets/line-70-Q1a.png"/>
         <p class="why-choose-scissors-bTz">
-          <span class="why-choose-scissors-bTz-sub-0">Why choose </span>
+          <span class="why-choose-scissors-bTz-sub-0">Why choose &nbsp;</span>
           <span class="why-choose-scissors-bTz-sub-1">Scissors</span>
         </p>
       </div>
@@ -175,8 +174,8 @@
     <img class="line-70-A6x" src="./assets/line-70.png"/>
     <div class="frame-1000001673-HxG">
       <p class="a-price-perfect-for-your-needs-RHn">
-        <span class="a-price-perfect-for-your-needs-RHn-sub-0">A</span>
-        <span class="a-price-perfect-for-your-needs-RHn-sub-1">price perfect</span>
+        <span class="a-price-perfect-for-your-needs-RHn-sub-0">A &nbsp;</span>
+        <span class="a-price-perfect-for-your-needs-RHn-sub-1">price perfect &nbsp;</span>
         <span class="a-price-perfect-for-your-needs-RHn-sub-2">for your needs.</span>
       </p>
       <p class="from-catering-for-your-personal-business-event-socials-needs-you-can-be-rest-assured-we-have-you-in-mind-in-our-pricing-uMN">From catering for your personal, business, event, socials needs, you can be rest assured we have you in mind in our pricing.</p>
@@ -419,7 +418,7 @@
       <div class="logo-hrk">
         <img class="vector-SpL" src="./assets/vector.png"/>
         <img class="vector-2-NT6" src="REPLACE_IMAGE:I1:485;74:1269"/>
-        <div class="scissor-Xat">SCISSOR</div>
+        <div class="scissor-Xat"><b>| SCISSOR</b></div>
       </div>
       <div class="socials-r7N">
         <img class="ifi-social-twitter-ubS" src="./assets/ifi-social-twitter.png"/>
@@ -540,11 +539,8 @@
     <img class="group-2-2Mr" src="./assets/group-2-aje.png"/>
     <div class="frame-1000001666-vCL">
       <div class="term-of-service-3Gx">Term of Service</div>
-      <img class="vector-5-9at" src="REPLACE_IMAGE:1:501"/>
       <div class="security-GvQ">Security</div>
-      <img class="vector-6-ovL" src="REPLACE_IMAGE:1:503"/>
-      <div class="scissor-2023-wFr">ⓒ Scissor 2023</div>
-      <img class="vector-7-ovL" src="REPLACE_IMAGE:1:505"/>
+      <div class="scissor-2023-wFr">Scissor 2023</div>
     </div>
   </div>
 </div>
