First Semester Assignment

--- a/Assignment.html
+++ b/Assignment.html
@@ -6,7 +6,7 @@
   <link rel="icon" href="/favicon.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
-  <title>Hero section </title>
+  <title>First Semester Assignment</title>
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Gilroy-Medium%3A400"/>
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Gilroy-SemiBold%3A400"/>
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Kanit%3A600"/>
